feature: styling changes

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,8 +1,7 @@
 .c-button {
   width: 100%;
-
   padding: 10px;
-  margin: 10px;
+  margin: 10px 0 10px 0;
   border: none;
 
   background-color: lightgoldenrodyellow;
