--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -4,7 +4,7 @@
   margin: 10px 0 10px 0;
   border: none;
 
-  background-color: lightgoldenrodyellow;
+  background-color: salmon;
   color: black;
 
   cursor: pointer;
