--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -4,8 +4,19 @@
   margin: 10px 0 10px 0;
   border: none;
 
-  background-color: salmon;
+  font-size: 14px;
+
+  background-color: rgba(250, 128, 114, 0.7);
   color: black;
 
   cursor: pointer;
+}
+
+.c-button:hover {
+  background-color: rgb(250, 128, 114);
+}
+
+.c-button:disabled {
+  background-color: lightgray;
+  cursor: unset;
 }
