--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -12,6 +12,26 @@
   cursor: pointer;
 }
 
+.c-button--menu {
+  padding: 15px 10px;
+  display: inline-flex;
+  width: unset;
+  margin: 10px;
+}
+
+.c-button--logout {
+  background: black;
+  color: white;
+  padding: 15px 10px;
+  display: inline-flex;
+  width: unset;
+  margin: 10px;
+}
+
+.c-button--menu:first-of-type {
+  margin-left: 0px;
+}
+
 .c-button:hover {
   background-color: rgb(250, 128, 114);
 }
@@ -20,3 +40,4 @@
   background-color: lightgray;
   cursor: unset;
 }
+
