--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -6,10 +6,12 @@
 
   font-size: 14px;
 
-  background-color: rgba(250, 128, 114, 0.7);
+  background-color: rgba(255, 255, 255, 0);
   color: black;
 
   cursor: pointer;
+
+  transition: 0.3s;
 }
 
 .c-button--menu {
@@ -31,7 +33,7 @@
 }
 
 .c-button:hover {
-  background-color: rgb(250, 128, 114);
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .c-button--logout:hover {
