--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background: rgb(3, 65, 92);
+  background: linear-gradient(180deg, rgba(3, 65, 92, 0.8763796909492274) 0%, rgba(9, 65, 121, 0.6490066225165563) 35%, rgba(0, 212, 255, 1) 100%);
 }
 
 .App-logo {
