--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -21,8 +21,16 @@
   margin: 10px;
 }
 
+.c-button--return {
+  border-radius: 25px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
 .c-button--logout {
-  background: black;
+  border-radius: 25px;
+  padding-right: 15px;
+  padding-left: 15px;
   color: white;
   position: relative;
   right: 0;
@@ -36,8 +44,12 @@
   background-color: rgba(255, 255, 255, 0.2);
 }
 
+.c-button--return:hover {
+  background: rgba(4, 4, 155, 0.5);
+}
+
 .c-button--logout:hover {
-  background: darkblue;
+  background: rgba(114, 12, 12, 0.5);
 }
 
 .c-button:disabled {
