--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -36,6 +36,10 @@
   right: 0;
 }
 
+.c-button--login {
+  background: rgba(4, 4, 155, 0.5);
+}
+
 .c-button--menu:first-of-type {
   margin-left: 0px;
 }
@@ -55,5 +59,9 @@
 .c-button:disabled {
   background-color: lightgray;
   cursor: unset;
+}
+
+.c-button--login:disabled {
+  background-color: rgba(255, 255, 255, 0);
 }
 
