--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -13,7 +13,8 @@
   margin-bottom: 20px;
   justify-content: space-between;
 
-  background: rgba(255, 255, 255, 0.4);
+  /* background: rgba(255, 255, 255, 0.4); */
+  background-image: linear-gradient( rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0));
 }
 
 @media (min-width: 600px) {
