--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -12,6 +12,7 @@
   cursor: pointer;
 
   transition: 0.3s;
+  outline: none;
 }
 
 .c-button--menu {
@@ -31,7 +32,6 @@
   border-radius: 25px;
   padding-right: 15px;
   padding-left: 15px;
-  color: white;
   position: relative;
   right: 0;
 }
@@ -49,10 +49,12 @@
 }
 
 .c-button--return:hover {
+  color: white;
   background: rgba(4, 4, 155, 0.5);
 }
 
 .c-button--logout:hover {
+  color: white;
   background: rgba(114, 12, 12, 0.5);
 }
 
