--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -5,9 +5,11 @@
   border: none;
 
   font-size: 14px;
+  font-weight: lighter;
 
   background-color: rgba(255, 255, 255, 0);
   color: black;
+  border-radius: 25px;
 
   cursor: pointer;
 
@@ -20,16 +22,16 @@
   display: inline-flex;
   width: unset;
   margin: 10px;
+
+  background-color: rgba(255, 255, 255, 0.05); 
 }
 
 .c-button--return {
-  border-radius: 25px;
   padding-right: 15px;
   padding-left: 15px;
 }
 
 .c-button--logout {
-  border-radius: 25px;
   padding-right: 15px;
   padding-left: 15px;
   position: relative;
@@ -52,6 +54,10 @@
 .c-button--return:hover {
   color: white;
   background: rgba(4, 4, 155, 0.5);
+}
+
+.c-button--menu:hover {
+  box-shadow: 0 0 20px lightcyan;
 }
 
 .c-button--logout:hover {
