--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,3 @@
-.c-navbar h5 {
-  display: none;
-}
-
 .c-navbar {
   position: fixed;
   top: 0;
@@ -9,16 +5,13 @@
   right: 0;
 
   display: flex;
-  padding: 5px 60px;
+  padding: 5px 80px;
   margin-bottom: 20px;
   justify-content: space-between;
 
-  /* background: rgba(255, 255, 255, 0.4); */
-  background-image: linear-gradient( rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+  background-image: linear-gradient( rgb(19, 12, 82, 0.9), rgba(107, 108, 150, 0));
 }
 
-@media (min-width: 600px) {
-  .c-navbar h5 {
-    display: block;
-  }
+.c-navbar * {
+  color: white;
 }
