--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -2,38 +2,39 @@
   width: 100%;
   max-width: 320px;
   height: 30px;
-  margin: 10px auto;
+  margin: 10px auto 52px;
+  border: none;
   padding: 10px 10px 10px 20px;
-  border: 1px solid lightblue;
   border-radius: 30px;
   font-size: 16px;
 }
 
 .c-input:focus {
   outline: none;
-  border: 1px solid skyblue;
+  box-shadow: 0 0 10px rgba(135, 206, 235, 0.4);
 }
 
 .c-input--invalid {
-  border: 1px solid red;
+  box-shadow: 0 0 8px rgba(211, 26, 26, 0.9);
+  margin-bottom: 10px;
 }
 
 .c-input--invalid:focus {
-  border: 1px solid red;
+  box-shadow: 0 0 8px rgba(211, 26, 26, 0.9);
 }
 
 .c-input__label {
   display: block;
-  padding-left: 22px;
   font-size: 14px;
   color: white;
 }
 
 .c-input__error {
-  display: block;
-  color: red;
-  padding: 6px;
-  background: rgba(255, 255, 255, 0.4);
-  font-size: 14px;
-  border-radius: 14px;
+    display: flex;
+    width: fit-content;
+    color: red;
+    padding: 12px;
+    background: rgba(255, 255, 255, 0.6);
+    font-size: 14px;
+    border-radius: 22px;
 }
