--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -11,10 +12,15 @@ body {
 
   background: rgb(3, 65, 92);
   background-size: 500%;
-  background: linear-gradient(30deg, rgba(3, 65, 92, 0.8763796909492274) 0%, rgba(9, 65, 121, 0.6490066225165563) 35%, rgba(0, 212, 255, 1) 100%);
+  background: linear-gradient(30deg, #8360c3 0%, #2ebf91 100%);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.--no-hover:hover {
+  box-shadow: initial!important;
+  cursor: initial!important;
 }
